--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"clsx": "^2.1.1",
 		"mode-watcher": "^0.5.0",
 		"tailwind-merge": "^2.6.0",
-		"tailwind-variants": "^0.3.0"
+		"tailwind-variants": "^0.3.0",
+		"zod": "^3.24.1"
 	}
 }
