--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"formsnap": "1.0.1",
 		"globals": "^15.0.0",
 		"lucide-svelte": "^0.469.0",
 		"prettier": "^3.3.2",
@@ -29,10 +30,12 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"sveltekit-superforms": "^2.22.1",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^5.4.11"
+		"vite": "^5.4.11",
+		"zod": "^3.24.1"
 	},
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.9",
@@ -40,7 +43,6 @@
 		"clsx": "^2.1.1",
 		"mode-watcher": "^0.5.0",
 		"tailwind-merge": "^2.6.0",
-		"tailwind-variants": "^0.3.0",
-		"zod": "^3.24.1"
+		"tailwind-variants": "^0.3.0"
 	}
 }
